--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,9 +6,9 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family Courier New 
+# font_family Andale Mono
 # bold_font        auto
-italic_font   Courier New 
+#italic_font   Courier New 
    
 # bold_italic_font auto
 
