Change nvim theme. Add some commands

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1668,26 +1668,26 @@ background_opacity 1
 
 #: }}}
 
-#: Scrolling {{{
+ Scrolling {{{
 
 #: Scroll line up
 
 # map kitty_mod+up    scroll_line_up
-# map kitty_mod+k     scroll_line_up
+:map cmd+k     scroll_line_up
 # map opt+cmd+page_up scroll_line_up
 # map cmd+up          scroll_line_up
 
 #: Scroll line down
 
 # map kitty_mod+down    scroll_line_down
-# map kitty_mod+j       scroll_line_down
+:map cmd+j       scroll_line_down
 # map opt+cmd+page_down scroll_line_down
 # map cmd+down          scroll_line_down
 
 #: Scroll page up
 
 # map kitty_mod+page_up scroll_page_up
-# map cmd+page_up       scroll_page_up
+# map cmd+shift=page_up       scroll_page_up
 
 #: Scroll page down
 
@@ -1758,7 +1758,7 @@ background_opacity 1
 #::  Requires shell integration
 #::  <https://sw.kovidgoyal.net/kitty/shell-integration/> to work.
 
-#: }}}
+ }}}
 
 #: Window management {{{
 
