Add lualine and change font

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,10 +20,10 @@
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-#:     font_family      Operator Mono Book
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
+     font_family      JetBrains Mono 
+     bold_font        auto 
+     italic_font      auto 
+     bold_italic_font auto 
 
 font_size 14.0
 
@@ -1668,19 +1668,19 @@ background_opacity 1
 
 #: }}}
 
- Scrolling {{{
+ # Scrolling {{{
 
 #: Scroll line up
 
 # map kitty_mod+up    scroll_line_up
-:map cmd+k     scroll_line_up
+map ctrl+shift+k     scroll_page_up
 # map opt+cmd+page_up scroll_line_up
 # map cmd+up          scroll_line_up
 
 #: Scroll line down
 
 # map kitty_mod+down    scroll_line_down
-:map cmd+j       scroll_line_down
+map ctrl+shift+j       scroll_page_down
 # map opt+cmd+page_down scroll_line_down
 # map cmd+down          scroll_line_down
 
@@ -1758,7 +1758,7 @@ background_opacity 1
 #::  Requires shell integration
 #::  <https://sw.kovidgoyal.net/kitty/shell-integration/> to work.
 
- }}}
+ # }}}
 
 #: Window management {{{
 
