--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,7 +20,7 @@
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-     font_family      JetBrains Mono 
+     font_family      Roboto Mono 
      bold_font        auto 
      italic_font      auto 
      bold_italic_font auto 
