--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -836,7 +836,7 @@ font_size 14.0
 
 #: }}}
 
-#: Tab bar {{{
+#: Tab bar {{{{{{
 
 # tab_bar_edge bottom
 
@@ -853,7 +853,7 @@ font_size 14.0
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+ #tab_bar_style powerline 
 
 #: The tab bar style, can be one of:
 
@@ -985,7 +985,7 @@ font_size 14.0
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color.
 
-#: }}}
+#: }}}}}}
 
 #: Color scheme {{{
 
